update: style gap nav links & position top 0 navbar

--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
         </div>
         <a href="https://unri.ac.id/en/?" class="hover:text-white duration-500">English</a>
     </header>
-    <div class="bg-primary md:sticky z-50">
+    <div class="bg-primary md:sticky z-50 top-0">
         <nav class="md:mx-12 mx-8 md:relative static flex justify-between items-center h-20 shadow-sm">
             <img src="assets/logo_navigasi_bar.png" alt="Logo Universitas Riau" class="md:max-h-11 max-h-6">
-            <ul id="navigation-bar" class="_poppins-medium cursor-pointer z-[99] md:p-0 md:static flex md:flex-row md:bg-transparent flex-col md:justify-end items-end md:h-full text-[13px] text-white fixed top-0 p-10 h-screen w-[65%] left-full bg-dark-900 text-left justify-center transition-all duration-300">
+            <ul id="navigation-bar" class="_poppins-medium cursor-pointer z-[99] md:p-0 md:static flex gap-4 md:flex-row md:bg-transparent flex-col md:justify-end items-end md:h-full text-[13px] text-white fixed top-0 p-10 h-screen w-[65%] left-full bg-dark-900 text-left justify-center transition-all duration-300">
                 <div id="hamburger-side" class="flex flex-col gap-[5px] md:hidden w-full mb-10 -translate-x-3">
                     <span class="hamburger-line"></span>
                     <span class="hamburger-line"></span>
                     <span class="hamburger-line"></span>
                 </div>
-                <li class="_nav-menu px-2 group">
+                <li class="_nav-menu group">
                     <a href="#" class="_active md:w-fit w-full md:border-none border-b border-gray-100 py-5 block hover:text-secondary duration-500">BERANDA</a>
                 </li>
-                <li class="_nav-menu px-2 group"> 
+                <li class="_nav-menu group"> 
                     <a href="#" class="md:w-fit w-full md:border-none border-b border-gray-100 hover:text-secondary duration-500 py-5 flex justify-between">
                         <span class="_text-sub-menu">TENTANG UNRI</span>
                         <span data-collapse="tentang-unri" class="_button-sub-menu px-2 text-[12px] md:hidden inline-block"><i class="fa-solid fa-chevron-right"></i></span>
@@ -159,7 +159,7 @@
                         </div>
                     </div> 
                 </li>
-                <li class="_nav-menu px-2 group">
+                <li class="_nav-menu group">
                     <a href="#" class="md:w-fit w-full md:border-none border-b border-gray-100 py-5 hover:text-secondary duration-500 flex justify-between">
                         PENDIDIKAN <span data-collapse="pendidikan" class="_button-sub-menu px-2 text-[12px] md:hidden inline-block"><i class="fa-solid fa-chevron-right"></i></span>
                     </a>
@@ -221,16 +221,16 @@
                         </div>
                     </div>
                 </li>
-                <li class="_nav-menu px-2 group">
+                <li class="_nav-menu group">
                     <a href="#" class="md:w-fit w-full md:border-none border-b border-gray-100 py-5 block hover:text-secondary duration-500">PENELITIAN</a>
                 </li>
-                <li class="_nav-menu px-2 group">
+                <li class="_nav-menu group">
                     <a href="#" class="md:w-fit w-full md:border-none border-b border-gray-100 py-5 block hover:text-secondary duration-500">MAHASISWA</a>
                 </li>
-                <li class="_nav-menu px-2 group">
+                <li class="_nav-menu group">
                     <a href="#" class="md:w-fit w-full md:border-none border-b border-gray-100 py-5 block hover:text-secondary duration-500">INTERNASIONAL</a>
                 </li>
-                <li class="_nav-menu px-2 group">
+                <li class="_nav-menu group">
                     <a href="#" class="md:w-fit w-full md:border-none border-b border-gray-100 py-5 hover:text-secondary duration-500 flex justify-between">
                         <span class="_text-sub-menu">SISTEM INFORMASI</span>
                         <span data-collapse="sistem-informasi" class="_button-sub-menu px-2 text-[12px] md:hidden inline-block"><i class="fa-solid fa-chevron-right"></i></span>
@@ -342,7 +342,7 @@
                         </div>
                     </div> 
                 </li>
-                <li class="_nav-menu px-2 group">
+                <li class="_nav-menu group">
                     <a href="#" class="md:w-fit w-full md:border-none border-b border-gray-100 py-5 block hover:text-secondary duration-500">PENDAFTARAN</a>
                 </li>
             </ul>
@@ -505,11 +505,23 @@
             </article>
             <article class="w-full">
                 <p class="_poppins-semibold text-sm text-dark-400 cursor-pointer">JULY 29, 2024</p>
-                <a href="#" class="_poppins-bold block mt-2 text-dark-600 cursor-pointer hover:text-secondary duration-500">Peninjauan UKT Mahasiswa Baru Jalur PBUD 2024</a>
+                <a href="#" class="_poppins-bold block mt-2 text-dark-600 cursor-pointer hover:text-secondary duration-500">Pengajuan Refund UKT Mahasiswa Baru Jalur SNBP 20244</a>
             </article>
             <article class="w-full">
-                <p class="_poppins-semibold text-sm text-dark-400 cursor-pointer">JULY 29, 2024</p>
-                <a href="#" class="_poppins-bold block mt-2 text-dark-600 cursor-pointer hover:text-secondary duration-500">Peninjauan UKT Mahasiswa Baru Jalur PBUD 2024</a>
+                <p class="_poppins-semibold text-sm text-dark-400 cursor-pointer">JULY 26, 2024</p>
+                <a href="#" class="_poppins-bold block mt-2 text-dark-600 cursor-pointer hover:text-secondary duration-500">Perpanjangan Pembayaran UKT Semester Ganjil 2024/2025</a>
+            </article>
+            <article class="w-full">
+                <p class="_poppins-semibold text-sm text-dark-400 cursor-pointer">JULY 25, 2024</p>
+                <a href="#" class="_poppins-bold block mt-2 text-dark-600 cursor-pointer hover:text-secondary duration-500">Mobile Intelectual Property Clinic (MIC) Tahun 2024</a>
+            </article>
+            <article class="w-full">
+                <p class="_poppins-semibold text-sm text-dark-400 cursor-pointer">JULY 10, 2024</p>
+                <a href="#" class="_poppins-bold block mt-2 text-dark-600 cursor-pointer hover:text-secondary duration-500">Peninjauan UKT SMM PTN-BARAT 2024</a>
+            </article>
+            <article class="w-full">
+                <p class="_poppins-semibold text-sm text-dark-400 cursor-pointer">June 26, 2024</p>
+                <a href="#" class="_poppins-bold block mt-2 text-dark-600 cursor-pointer hover:text-secondary duration-500">Pembayaran UKT/SPP Semester Ganjil Tahun Ajaran 2024/2025</a>
             </article>
         </div>
         <div class="flex justify-center w-full mt-16">
