--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <a href="https://unri.ac.id/en/?" class="hover:text-white duration-500">English</a>
     </header>
     <div class="bg-primary md:sticky z-50 top-0">
-        <nav class="md:mx-12 mx-8 md:relative static flex justify-between items-center h-20 shadow-sm">
+        <nav class="md:mx-12 mx-8 md:relative relative flex justify-between items-center h-20 shadow-sm">
             <img src="assets/logo_navigasi_bar.png" alt="Logo Universitas Riau" class="md:max-h-11 max-h-6">
             <ul id="navigation-bar" class="_poppins-medium cursor-pointer z-[99] md:p-0 md:static flex gap-4 md:flex-row md:bg-transparent flex-col md:justify-end items-end md:h-full text-[13px] text-white fixed top-0 p-10 h-screen w-[65%] left-full bg-dark-900 text-left justify-center transition-all duration-300">
                 <div id="hamburger-side" class="flex flex-col gap-[5px] md:hidden w-full mb-10 -translate-x-3">
@@ -59,10 +59,10 @@
                     <a href="#" class="_active md:w-fit w-full md:border-none border-b border-gray-100 py-5 block hover:text-secondary duration-500">BERANDA</a>
                 </li>
                 <li class="_nav-menu group"> 
-                    <a href="#" class="md:w-fit w-full md:border-none border-b border-gray-100 hover:text-secondary duration-500 py-5 flex justify-between">
-                        <span class="_text-sub-menu">TENTANG UNRI</span>
+                    <span class="md:w-fit w-full md:border-none border-b border-gray-100 hover:text-secondary duration-500 py-5 flex justify-between">
+                        <a href="#" class="_text-sub-menu">TENTANG UNRI</a>
                         <span data-collapse="tentang-unri" class="_button-sub-menu px-2 text-[12px] md:hidden inline-block"><i class="fa-solid fa-chevron-right"></i></span>
-                    </a>
+                    </span>
                     <div data-ref-collapse="tentang-unri" class="_sub-menu md:hidden block md:group-hover:flex justify-between gap-8 md:bg-primary-500 bg-dark-900 absolute left-0 md:top-20 w-full p-10 top-0">
                         <div class="_back-side flex flex-col gap-[5px] md:hidden w-full mb-10 -translate-x-3">
                             <span class="hamburger-line"></span>
@@ -70,11 +70,11 @@
                             <span class="hamburger-line"></span>
                         </div>
                         <div class="_sub-menu-wrapper w-full">
-                            <a href="#" class="_poppins-semibold flex justify-between px-2 text-lg text-my-blue-600 hover:bg-gray-100 duration-300 border-gray-100">
-                                <span class="_text-sub-menu">Organisasi</span>
+                            <span class="_poppins-semibold flex justify-between px-2 text-lg text-my-blue-600 hover:bg-gray-100 duration-300 border-gray-100">
+                                <a href="#" class="_text-sub-menu">Organisasi</a>
                                 <span 
                                 data-collapse="organisasi" class="_button-sub-sub-menu px-2 text-[12px] md:hidden inline-block"><i class="fa-solid fa-chevron-right"></i></span>
-                            </a> 
+                            </span> 
                             <ul data-ref-collapse="organisasi" class="_sub-sub-menu md:flex md:p-0 block md:relative flex-col mt-6 md:bg-transparent bg-dark-900 w-full absolute left-0 p-10 top-0">
                                 <div class="_back-side-sub-menu flex flex-col gap-[5px] md:hidden w-full mb-10 -translate-x-3">
                                     <span class="hamburger-line"></span>
@@ -102,12 +102,12 @@
                             </ul>
                         </div>
                         <div class="_sub-menu-wrapper w-full">
-                            <a href="#" class="_poppins-semibold flex justify-between px-2 text-lg text-my-blue-600 hover:bg-gray-100 duration-300 border-gray-100">
-                                <span class="_text-sub-menu">Sekilas UNRI</span>
+                            <span class="_poppins-semibold flex justify-between px-2 text-lg text-my-blue-600 hover:bg-gray-100 duration-300 border-gray-100">
+                                <a href="#" class="_text-sub-menu">Sekilas UNRI</a>
                                 <span 
                                 data-collapse="sekilas-unri"
                                 class="_button-sub-sub-menu px-2 text-[12px] md:hidden inline-block"><i class="fa-solid fa-chevron-right"></i></span>
-                            </a> 
+                            </span> 
                             <ul 
                                 data-ref-collapse="sekilas-unri"
                                 class="_sub-sub-menu md:flex md:p-0 block md:relative flex-col mt-6 md:bg-transparent bg-dark-900 w-full absolute left-0 p-10 top-0">
@@ -137,11 +137,11 @@
                             </ul>
                         </div>
                         <div class="_sub-menu-wrapper w-full">
-                            <a href="#" class="_poppins-semibold flex justify-between px-2 text-lg text-my-blue-600 hover:bg-gray-100 duration-300 border-gray-100">
-                                <span class="_text-sub-menu">Visi, Misi dan Tugas</span>
+                            <span class="_poppins-semibold flex justify-between px-2 text-lg text-my-blue-600 hover:bg-gray-100 duration-300 border-gray-100">
+                                <a href="#" class="_text-sub-menu">Visi, Misi dan Tugas</a>
                                 <span
                                 data-collapse="visi-misi-tugas" class="_button-sub-sub-menu px-2 text-[12px] md:hidden inline-block"><i class="fa-solid fa-chevron-right"></i></span>
-                            </a> 
+                            </span> 
                             <ul 
                             data-ref-collapse="visi-misi-tugas" class="_sub-sub-menu md:flex md:p-0 block md:relative flex-col mt-6 md:bg-transparent bg-dark-900 w-full absolute left-0 p-10 top-0">
                                 <div class="_back-side-sub-menu flex flex-col gap-[5px] md:hidden w-full mb-10 -translate-x-3">
@@ -160,9 +160,12 @@
                     </div> 
                 </li>
                 <li class="_nav-menu group">
-                    <a href="#" class="md:w-fit w-full md:border-none border-b border-gray-100 py-5 hover:text-secondary duration-500 flex justify-between">
-                        PENDIDIKAN <span data-collapse="pendidikan" class="_button-sub-menu px-2 text-[12px] md:hidden inline-block"><i class="fa-solid fa-chevron-right"></i></span>
-                    </a>
+                    <span class="md:w-fit w-full md:border-none border-b border-gray-100 py-5 hover:text-secondary duration-500 flex justify-between">
+                        <a href="" class="_text-sub-menu">
+                            PENDIDIKAN 
+                        </a>
+                        <span data-collapse="pendidikan" class="_button-sub-menu px-2 text-[12px] md:hidden inline-block"><i class="fa-solid fa-chevron-right"></i></span>
+                    </span>
                     <div data-ref-collapse="pendidikan" class="_sub-menu md:hidden block md:group-hover:flex justify-between gap-8 md:bg-primary-500 bg-dark-900 absolute left-0 md:top-20 w-full p-10 top-0">
                         <div class="_back-side flex flex-col gap-[5px] md:hidden w-full mb-10 -translate-x-3">
                             <span class="hamburger-line"></span>
@@ -170,11 +173,11 @@
                             <span class="hamburger-line"></span>
                         </div>
                         <div class="_sub-menu-wrapper w-full">
-                            <a href="#" class="_poppins-semibold flex justify-between px-2 text-lg text-my-blue-600 hover:bg-gray-100 duration-300 border-gray-100">
-                                <span class="_text-sub-menu">Fakultas</span>
+                            <span class="_poppins-semibold flex justify-between px-2 text-lg text-my-blue-600 hover:bg-gray-100 duration-300 border-gray-100">
+                                <a href="#" class="_text-sub-menu">Fakultas</a>
                                 <span
                                 data-collapse="fakultas" class="_button-sub-sub-menu px-2 text-[12px] md:hidden inline-block"><i class="fa-solid fa-chevron-right"></i></span>
-                            </a> 
+                            </span> 
                             <ul data-ref-collapse="fakultas" class="_sub-sub-menu md:flex md:p-0 block md:relative flex-col mt-6 md:bg-transparent bg-dark-900 w-full absolute left-0 p-10 top-0">
                                 <div class="_back-side-sub-menu flex flex-col gap-[5px] md:hidden w-full mb-10 -translate-x-3">
                                     <span class="hamburger-line"></span>
@@ -231,10 +234,10 @@
                     <a href="#" class="md:w-fit w-full md:border-none border-b border-gray-100 py-5 block hover:text-secondary duration-500">INTERNASIONAL</a>
                 </li>
                 <li class="_nav-menu group">
-                    <a href="#" class="md:w-fit w-full md:border-none border-b border-gray-100 py-5 hover:text-secondary duration-500 flex justify-between">
-                        <span class="_text-sub-menu">SISTEM INFORMASI</span>
+                    <span class="md:w-fit w-full md:border-none border-b border-gray-100 py-5 hover:text-secondary duration-500 flex justify-between">
+                        <a href="#" class="_text-sub-menu">SISTEM INFORMASI</a>
                         <span data-collapse="sistem-informasi" class="_button-sub-menu px-2 text-[12px] md:hidden inline-block"><i class="fa-solid fa-chevron-right"></i></span>
-                    </a>
+                    </span>
                     <div data-ref-collapse="sistem-informasi" class="_sub-menu md:hidden block md:group-hover:flex justify-between gap-8 md:bg-primary-500 bg-dark-900 absolute left-0 md:top-20 w-full p-10 top-0">
                         <div class="_back-side flex flex-col gap-[5px] md:hidden w-full mb-10 -translate-x-3">
                             <span class="hamburger-line"></span>
@@ -242,11 +245,11 @@
                             <span class="hamburger-line"></span>
                         </div>
                         <div class="_sub-menu-wrapper w-full">
-                            <a href="#" class="_poppins-semibold flex justify-between px-2 text-lg text-my-blue-600 hover:bg-gray-100 duration-300 border-gray-100">
-                                <span class="_text-sub-menu">Penerimaan Mahasiswa Baru</span>
+                            <span class="_poppins-semibold flex justify-between px-2 text-lg text-my-blue-600 hover:bg-gray-100 duration-300 border-gray-100">
+                                <a href="#" class="_text-sub-menu">Penerimaan Mahasiswa Baru</a>
                                 <span
                                 data-collapse="penerimaan-mahasiswa-baru" class="_button-sub-sub-menu px-2 text-[12px] md:hidden inline-block"><i class="fa-solid fa-chevron-right"></i></span>
-                            </a> 
+                            </span> 
                             <ul data-ref-collapse="penerimaan-mahasiswa-baru" class="_sub-sub-menu md:flex md:p-0 block md:relative flex-col mt-6 md:bg-transparent bg-dark-900 w-full absolute left-0 p-10 top-0">
                                 <div class="_back-side-sub-menu flex flex-col gap-[5px] md:hidden w-full mb-10 -translate-x-3">
                                     <span class="hamburger-line"></span>
@@ -265,11 +268,11 @@
                             </ul>
                         </div>
                         <div class="_sub-menu-wrapper w-full">
-                            <a href="#" class="_poppins-semibold flex justify-between px-2 text-lg text-my-blue-600 hover:bg-gray-100 duration-300 border-gray-100">
-                                <span class="_text-sub-menu">Sistem Informasi Akademik</span>
+                            <span class="_poppins-semibold flex justify-between px-2 text-lg text-my-blue-600 hover:bg-gray-100 duration-300 border-gray-100">
+                                <a href="#" class="_text-sub-menu">Sistem Informasi Akademik</a>
                                 <span
                                 data-collapse="sistem-informasi-akademik" class="_button-sub-sub-menu px-2 text-[12px] md:hidden inline-block"><i class="fa-solid fa-chevron-right"></i></span>
-                            </a> 
+                            </span> 
                             <ul data-ref-collapse="sistem-informasi-akademik" class="_sub-sub-menu md:flex md:p-0 block md:relative flex-col mt-6 md:bg-transparent bg-dark-900 w-full absolute left-0 p-10 top-0">
                                 <div class="_back-side-sub-menu flex flex-col gap-[5px] md:hidden w-full mb-10 -translate-x-3">
                                     <span class="hamburger-line"></span>
@@ -306,11 +309,11 @@
                             </ul>
                         </div>
                         <div class="_sub-menu-wrapper w-full">
-                            <a href="#" class="_poppins-semibold flex justify-between px-2 text-lg text-my-blue-600 hover:bg-gray-100 duration-300 border-gray-100">
-                                <span class="_text-sub-menu">Layanan IT</span>
+                            <span class="_poppins-semibold flex justify-between px-2 text-lg text-my-blue-600 hover:bg-gray-100 duration-300 border-gray-100">
+                                <a href="#" class="_text-sub-menu">Layanan IT</a>
                                 <span
                                 data-collapse="layanan-it" class="_button-sub-sub-menu px-2 text-[12px] md:hidden inline-block"><i class="fa-solid fa-chevron-right"></i></span>
-                            </a> 
+                            </span> 
                             <ul data-ref-collapse="layanan-it" class="_sub-sub-menu md:flex md:p-0 block md:relative flex-col mt-6 md:bg-transparent bg-dark-900 w-full absolute left-0 p-10 top-0">
                                 <div class="_back-side-sub-menu flex flex-col gap-[5px] md:hidden w-full mb-10 -translate-x-3">
                                     <span class="hamburger-line"></span>
@@ -645,8 +648,8 @@
     </section>
     <section id="about" class="overflow-hidden">
         <article class="grid md:grid-cols-2 grid-cols-1 min-h-screen items-center">
-            <div class="w-full h-full flex items-center">
-                <img src="assets/header_about.jpg" alt="Header About UNRI" class="w-full md:h-full h-[120px] object-cover">
+            <div class="_parallax w-full h-full flex items-center">
+                <!-- <img src="assets/header_about.jpg" alt="Header About UNRI" class="w-full md:h-full bg-center bg-fixed bg-no-repeat bg-cover h-[120px]"> -->
             </div>
             <div data-aos-once="true" data-aos="fade-left" class="md:px-20 px-8 py-16">
                 <h2 class="_poppins-bold text-[40px] w-fit">Tentang UNRI</h2>
