--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
         </div>
         <a href="https://unri.ac.id/en/?" class="hover:text-white duration-500">English</a>
     </header>
-    <div class="bg-primary md:sticky z-50 top-0">
+    <div class="_nav-container bg-primary md:sticky z-[999] top-0">
         <nav class="md:mx-12 mx-8 md:relative relative flex justify-between items-center h-20 shadow-sm">
             <img src="assets/logo_navigasi_bar.png" alt="Logo Universitas Riau" class="md:max-h-11 max-h-6">
-            <ul id="navigation-bar" class="_poppins-medium cursor-pointer z-[99] md:p-0 md:static flex gap-4 md:flex-row md:bg-transparent flex-col md:justify-end items-end md:h-full text-[13px] text-white fixed top-0 p-10 h-screen w-[65%] left-full bg-dark-900 text-left justify-center transition-all duration-300">
+            <ul id="navigation-bar" class="_poppins-medium cursor-pointer z-[99] md:p-0 md:static flex gap-4 md:flex-row md:bg-transparent flex-col md:justify-end items-end md:h-full text-[13px] text-white fixed top-0 p-10 w-[65%] left-full bg-dark-900 text-left justify-center transition-all duration-300">
                 <div id="hamburger-side" class="flex flex-col gap-[5px] md:hidden w-full mb-10 -translate-x-3">
                     <span class="hamburger-line"></span>
                     <span class="hamburger-line"></span>
@@ -161,7 +161,7 @@
                 </li>
                 <li class="_nav-menu group">
                     <span class="md:w-fit w-full md:border-none border-b border-gray-100 py-5 hover:text-secondary duration-500 flex justify-between">
-                        <a href="" class="_text-sub-menu">
+                        <a href="#" class="_text-sub-menu">
                             PENDIDIKAN 
                         </a>
                         <span data-collapse="pendidikan" class="_button-sub-menu px-2 text-[12px] md:hidden inline-block"><i class="fa-solid fa-chevron-right"></i></span>
@@ -648,9 +648,7 @@
     </section>
     <section id="about" class="overflow-hidden">
         <article class="grid md:grid-cols-2 grid-cols-1 min-h-screen items-center">
-            <div class="_parallax w-full h-full flex items-center">
-                <!-- <img src="assets/header_about.jpg" alt="Header About UNRI" class="w-full md:h-full bg-center bg-fixed bg-no-repeat bg-cover h-[120px]"> -->
-            </div>
+            <div class="_parallax w-full md:h-full h-[120px]"></div>
             <div data-aos-once="true" data-aos="fade-left" class="md:px-20 px-8 py-16">
                 <h2 class="_poppins-bold text-[40px] w-fit">Tentang UNRI</h2>
                 <span class="block h-[1px] w-1/5 bg-primary my-2"></span>
