add: favicon example

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Deskripsi singkat mengenai website ini">
 
     <!-- Icon website -->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/logo favicon.png" type="image/x-icon">
 
     <link href="./style/main.css" rel="stylesheet" />
     <link href="./src/output.css" rel="stylesheet" />
